# traffic_analysis

./: .gitignore  README.md  setup.sh  traffic_analysis.p4
programmable_dataplanes/: analysis.ipynb  parser.py  plotter.py  pyproject.toml  task1.py  task2.py
programmable_dataplanes/structs/: packet_data.py
